objects/Vehicle_Telemetry_Event__e.object
<CustomObject>
    <description>Captures real-time data from connected vehicles.</description>
    <fields>
        <fullName>EngineTemp__c</fullName>
        <label>EngineTemp</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FuelLevel__c</fullName>
        <label>FuelLevel</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VehicleVIN__c</fullName>
        <label>VehicleVIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <label>Vehicle Telemetry Event</label>
    <pluralLabel>Vehicle Telemetry Events</pluralLabel>
</CustomObject>